refactor: Enforce ProjectOS backend, api, and security standards